tests/fails/niltype2.t


terra bar()
	var a : A
end

bar:compile()